# 8B

./: .gitignore  .typos.toml  Cargo.toml  deny.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/controller-core/: Cargo.toml
crates/controller-core/src/: detect.rs  device.rs  error.rs  lib.rs
crates/controller-core/src/devices/: mod.rs
crates/controller-core/src/devices/pro3/: macros.rs  mod.rs  profile.rs  tables.rs
crates/controller-core/src/model/: ids.rs  macros.rs  mod.rs  outcome.rs  profile.rs
crates/controller-core/src/orchestrator/: mod.rs  profile.rs
crates/controller-core/src/protocol/: bytes.rs  crc16.rs  mod.rs  text.rs  wire.rs
crates/controller-core/src/service/: mod.rs  read.rs
crates/controller-core/src/service/validation/: macros.rs  mod.rs  profile.rs
crates/controller-core/src/transport/: device_io.rs  mock.rs  mod.rs  nusb_device.rs
crates/controller-core/tests/: fixture_macros.rs  fixture_profiles.rs  golden_macro_decode.rs  golden_macro_encode.rs  golden_profile_compile.rs  golden_profile_decode.rs  hardware_read.rs  validation_macro.rs  validation_profile.rs
fixtures/pro3/: FIXTURES.md  macro-meta.blob  macro-sample.json  switch-slot1.profile.json  switch.blob  xinput-slot1.profile.json  xinput-slot2.profile.json  xinput.blob
fixtures/pro3/macros/: s-s1-m0-switch-routing.json  s-s2-m1-continuous.json  s-s2-m3-triggervariety.json  s-s3-m2-maxsteps.json  x-s1-m0-buttons.json  x-s1-m3-repeat.json  x-s2-m1-allbuttons.json  x-s3-m2-sticks-triggers.json
fixtures/pro3/remap/: switch-slot1.profile.blob  switch-slot1.profile.json  switch-slot2.profile.blob  switch-slot2.profile.json  switch-slot3.profile.blob  switch-slot3.profile.json  xinput-slot1.profile.blob  xinput-slot1.profile.json  xinput-slot2.profile.blob  xinput-slot2.profile.json  xinput-slot3.profile.blob  xinput-slot3.profile.json
schemas/: active-layout-v1.schema.json  macro-v1.schema.json  profile-v1.schema.json
