[workspace]
resolver = "2"
members = ["crates/controller-core", "crates/cli"]

[workspace.package]
edition = "2021"
rust-version = "1.84"
license = "MIT OR Apache-2.0"
repository = "local"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nusb = "0.2"
clap = { version = "4", features = ["derive"] }
serial_test = "3"
insta = { version = "1", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unreachable_pub = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
too_many_lines = "warn"
cognitive_complexity = "warn"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
