[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line interface for the 8BitDo Pro 3."

[[bin]]
name = "8bitdo-pro-3"
path = "src/main.rs"

[dependencies]
controller-core = { path = "../controller-core" }
serde_json.workspace = true
clap.workspace = true

[lints]
workspace = true
