[package]
name = "controller-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Device-neutral engine for 8BitDo controller configuration (Pro 3 backend)."

[features]
default = []
hardware = []          # gates real-device integration tests
test-utils = []        # exposes MockDevice + fixtures to integration tests

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
nusb.workspace = true

[dev-dependencies]
serial_test.workspace = true
insta.workspace = true
tempfile = "3"

[lints]
workspace = true
